Continua sviluppo API REST per gli utenti. Iniziata la gestione dell'API REST per i device

--- a/Server/static/html/login.html
+++ b/Server/static/html/login.html
@@ -17,6 +17,6 @@
     <input id="password" type="password" name="password" autocomplete="off">
     <label>password</label>
   </form>
-  <button onclick="login()">Log In</button>
+  <button id="login-button" onclick="login()">Log In</button>
 </body>
 </html>
