--- a/Server/static/html/dashboard.html
+++ b/Server/static/html/dashboard.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" type="text/css" href="/assets/css/dashboard.css">
   <script type="text/javascript" src="/assets/js/utils.js"></script>
   <script type="text/javascript" src="/assets/js/dashboard.js"></script>
+  <script type="text/javascript" src="/assets/js/dashboardDevices.js"></script>
+  <script type="text/javascript" src="/assets/js/dashboardUsers.js"></script>
   <title>LoM</title>
 </head>
 <body>
@@ -21,8 +23,6 @@
       <br>
       <input id="device-url" type="text" name="url">
       <label>Url</label>
-      <br><input id="device-body" type="text" name="body">
-      <label>Body</label>
     </form>
     <button id="add-device-button" onclick="addDevice()">Add</button>
   </div>
